--- a/Games.csproj
+++ b/Games.csproj
@@ -90,5 +90,15 @@
     <Compile Include="Scripts\Total War\Gumps\TotalWarGameDefinitionGump.cs" />
     <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Distro\Distro.csproj">
+      <Project>{C492FAC4-99A4-4AA3-A5C7-ED0CCB10EF0E}</Project>
+      <Name>Distro</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Server\Server.csproj">
+      <Project>{B2EAB854-8907-43BE-9B8F-9B1B64DDF597}</Project>
+      <Name>Server</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
